--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
             body {
-            	padding: none;
+                padding: none;
                 z-index: 0;
                 background-color: rgb(250, 147, 140);
                 color: white;
@@ -7,16 +7,17 @@
                 margin: none;
             }
             nav {
-                background-color: rgb(145, 19, 10);
-                color: white;
-                width: 100%;
-                height: 50px;
-                position: fixed;
-                z-index: 1 !important;
-                font-size: large;
-                margin-left: -9.5px;
-                margin-top: -30px;
-                text-align: center;
+               background-color: rgb(145, 19, 10);
+               color: white;
+               width: 100%;
+               height: 50px;
+               position: fixed;
+               z-index: 1 !important;
+               margin-left: -9.5px;
+               margin-top: -30px;
+               text-align: center;
+               float: left;
+               font-size: 10%;
             }
             nav a{
                 background-color: rgb(145, 19, 10);
@@ -26,6 +27,7 @@
                 z-index: 2 !important;
                 border-radius: 4%;
                 text-decoration: none;
+                float: left;
             }
             nav a:hover {
                 background-color: white;
@@ -35,11 +37,18 @@
                 z-index: 2 !important;
                 margin: none;
             }
+            nav a:active {
+                background-color: white;
+                color: orange;
+                width: 20%;
+                height: 50px;
+                z-index: 2 !important;
+                margin: none;
             #welcome {
-            	padding-top: 5px;
+                padding-top: 5px;
             }
             #warning {
-            	background-color: yellow; 
+                background-color: yellow; 
                 color: black; 
                 width: 300px; 
                 height: 150px; 
@@ -49,5 +58,5 @@
                 margin-right: 30%;
             }
             h1, h2, h3, h4, h5, h6 {
-            	text-decoration: none;
+                text-decoration: none;
             }
