--- a/index.css
+++ b/index.css
@@ -1,23 +1,23 @@
             body {
-                padding: none;
+                padding: 0;
                 z-index: 0;
                 background-color: rgb(250, 147, 140);
                 color: white;
                 font-family: sans-serif;
-                margin: none;
+                margin: 0;
             }
             nav {
                background-color: rgb(145, 19, 10);
                color: white;
                width: 100%;
-               height: 50px;
+               height: 52px;
                position: fixed;
                z-index: 1 !important;
-               margin-left: -9.5px;
-               margin-top: -30px;
                text-align: center;
                float: left;
-               font-size: 10%;
+               font-size: 20px;
+               margin-top: -25px;
+               
             }
             nav a{
                 background-color: rgb(145, 19, 10);
@@ -27,7 +27,6 @@
                 z-index: 2 !important;
                 border-radius: 4%;
                 text-decoration: none;
-                float: left;
             }
             nav a:hover {
                 background-color: white;
@@ -44,6 +43,7 @@
                 height: 50px;
                 z-index: 2 !important;
                 margin: none;
+                }
             #welcome {
                 padding-top: 5px;
             }
